--- a/base-html/exercise.html
+++ b/base-html/exercise.html
@@ -2,18 +2,26 @@
 <html lang="en"> <!-- Specify primary language for the page -->
 <head>
 	<!-- Set a page title in here! -->
-
+    <title>Hello!</title>
+    <link rel="stylesheet" href="..\base-css\exercise.css">
 </head>
 <body>
 	<!-- Add a top level header -->
-
+    <div>
+    <h1 id = "first-header">Kelly</h1>
 	<!-- Add an image here! https://www.sololearn.com/Icons/Courses/1014.png will do -->
+    <img src="https://www.sololearn.com/Icons/Courses/1014.png"></img>
 
-	<!-- Add a second level header -->
-	<!-- Add some formatted text! You can use <b> or <i> -->
 
+    </div>
 	<!-- Add a second level header -->
+    <h2 class = "second-header">This is weird</h2>
 	<!-- Add some formatted text! You can use <b> or <i> -->
+    <b>OK!!! Hello!</b>
+	<!-- Add a second level header -->
+    <h2 class = "second-header" id = "second-header">This is also weird</h2>
+	<!-- Add some formatted text! You can use <b> or <i> -->
+    <i>Whoooooooo!</i>
 
 </body>
 </html>
